Project

General

Profile

Actions

Bug #11200

closed

cpcgen needs smatch fixes again

Added by John Levon over 4 years ago. Updated over 4 years ago.

Status:
Closed
Priority:
Normal
Assignee:
Category:
-
Start date:
Due date:
% Done:

100%

Estimated time:
Difficulty:
Medium
Tags:
Gerrit CR:
External Bug:

Description

Recent cpcgen changes lost a couple of smatch fixes.


Related issues

Related to illumos gate - Bug #10323: cpcgen_parse_model() gets value check wrongClosedJohn Levon2019-01-30

Actions
Actions #1

Updated by Dan McDonald over 4 years ago

  • Related to Bug #10323: cpcgen_parse_model() gets value check wrong added
Actions #2

Updated by John Levon over 4 years ago

I mis-spoke slightly: the fix for the double-free was in fact a follow-up from illumos-joyent, that now applies to illumos gate since the more recent integrations. The other changes are indeed from #10323 and were accidentally backed out

Actions #3

Updated by Electric Monk over 4 years ago

  • Status changed from New to Closed
  • % Done changed from 0 to 100

git commit 00fc50d191cf90458c41a077d59fe2f81223f00a

commit  00fc50d191cf90458c41a077d59fe2f81223f00a
Author: John Levon <john.levon@joyent.com>
Date:   2019-06-06T10:04:39.000Z

    11200 cpcgen needs smatch fixes again
    Reviewed by: Toomas Soome <tsoome@me.com>
    Reviewed by: Andy Fiddaman <andy@omniosce.org>
    Approved by: Dan McDonald <danmcd@joyent.com>

Actions

Also available in: Atom PDF